@startuml Student Grade Calculator — Class Diagram

' ──────────────────────────────────────────────────────────────────────────────
' Model
' ──────────────────────────────────────────────────────────────────────────────

class Student {
  + studentId : String
  + name : String
  + scores : List<Double>
  + average : Double
  + grade : String
  + gpa : Double
  + status : String
  --
  + toString() : String
}

' ──────────────────────────────────────────────────────────────────────────────
' Service
' ──────────────────────────────────────────────────────────────────────────────

class GradeCalculator {
  + computeAverage(scores : List<Double>) : Double
  + assignGrade(average : Double) : String
  + assignGpa(average : Double) : Double
  + determineStatus(grade : String) : String
  + calculate(student : Student) : Student
  + calculateAll(students : List<Student>) : List<Student>
}

' ──────────────────────────────────────────────────────────────────────────────
' I/O
' ──────────────────────────────────────────────────────────────────────────────

class ExcelReader {
  - filePath : String
  --
  + read() : List<Student>
  + readSubjectHeaders() : List<String>
}

class ExcelWriter {
  - outputPath : String
  --
  + write(students : List<Student>, subjectHeaders : List<String>) : void
}

' ──────────────────────────────────────────────────────────────────────────────
' Relationships
' ──────────────────────────────────────────────────────────────────────────────

GradeCalculator ..> Student : enriches
ExcelReader ..> Student : creates
ExcelWriter ..> Student : reads
ExcelReader -[hidden]right- GradeCalculator
GradeCalculator -[hidden]right- ExcelWriter

@enduml
